--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "karma start"
+    "test": "karma start",
+    "single-test": "karma start --single-run"
   },
   "author": "Mauro Fruet",
   "license": "ISC",
