--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "karma start --single-run",
     "test-watch": "karma start"
   },
@@ -11,13 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jasmine": "^2.8.7",
+    "clean-webpack-plugin": "^0.1.19",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.2",
     "karma-typescript": "^3.0.12",
+    "ts-loader": "^4.2.0",
     "ts-node": "^6.0.2",
     "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "webpack": "^4.7.0",
+    "webpack-cli": "^2.1.2"
   }
 }
