add npm script to execute the application

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "add-numbers": "node dist/test.min.js",
     "build": "webpack",
     "test": "karma start --single-run",
     "test-watch": "karma start"
