--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-jasmine": "^1.1.2",
     "karma-typescript": "^3.0.12",
+    "puppeteer": "^1.3.0",
     "ts-loader": "^4.2.0",
     "ts-node": "^6.0.2",
     "tslint": "^5.10.0",
